--- a/openatlas/static/css/table.css
+++ b/openatlas/static/css/table.css
@@ -26,7 +26,7 @@ table.dataTable th,
     cursor: pointer;
 }
 
-table.dataTable td {
+table.dataTable td, table.dataTable th {
     white-space:nowrap;
 }
 
