--- a/openatlas/templates/reference/index.html
+++ b/openatlas/templates/reference/index.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}
-    {{ _('reference')|uc_first }}
-{% endblock %}
+{% block breadcrumb %}{{ [_('reference')]|breadcrumb|safe }}{% endblock %}
 {% block content %}
     {{ 'Reference'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
