--- a/openatlas/templates/actor/insert.html
+++ b/openatlas/templates/actor/insert.html
@@ -1,12 +1,10 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     {% if origin %}
-        <a href="{{ url_for(origin.view_name + '_index') }}">{{ _(origin.view_name)|uc_first }}</a>
-        > {{ origin|link|safe }}
+        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + g.classes[code].name]|breadcrumb|safe }}
     {% else %}
-        <a href="{{ url_for('actor_index') }}">{{ _('actor')|uc_first }}</a>
+        {{ [[_('actor'), 'actor_index'], '+ ' + g.classes[code].name]|breadcrumb|safe }}
     {% endif %}
-    > + {{ code|get_class_name }}
 {% endblock %}
 {% block content %}
     {{ form|display_form('Person', True if code=='E21' else False)|safe }}
