--- a/openatlas/templates/admin/map.html
+++ b/openatlas/templates/admin/map.html
@@ -1,8 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > {{ _('map')|uc_first }}
-{% endblock %}
+{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('map')]|breadcrumb|safe }}{% endblock %}
 {% block content %}
     {{ 'Map'|manual_link|safe }}
     {{ form|display_form|safe }}
