--- a/openatlas/templates/content/view.html
+++ b/openatlas/templates/content/view.html
@@ -1,9 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
-    > {{ _(item)|uc_first }}
-{% endblock %}
+{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], [_('content'), 'content_index'], _('item')]|breadcrumb|safe }}{% endblock %}
 {% block content %}
     <div class="button-bar">
         <a href="{{ url_for('content_update', item=item) }}">{{ _('edit')|uc_first }}</a>
