--- a/openatlas/templates/file/index.html
+++ b/openatlas/templates/file/index.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}
-    <a href="{{ url_for('file_index') }}">{{ _('files')|uc_first }}</a>
-{% endblock %}
+{% block breadcrumb %}{{ [_('files')]|breadcrumb|safe }}{% endblock %}
 {% block content %}
     {% if 'contributor'|is_authorized %}
         <div class="button-bar">
