--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}
-    {{ _('overview')|uc_first }}
-{% endblock %}
+{% block breadcrumb %}{{ [_('overview')]|breadcrumb|safe }}{% endblock %}
 {% block content %}
     {% if current_user.is_authenticated %}
         {% if tables['overview']['rows'] %}
