--- a/openatlas/templates/object/index.html
+++ b/openatlas/templates/object/index.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}
-    {{ _('object')|uc_first }}
-{% endblock %}
+{% block breadcrumb %}{{ [_('object')]|breadcrumb|safe }}{% endblock %}
 {% block content %}
     {{ 'Object'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
