--- a/openatlas/templates/place/index.html
+++ b/openatlas/templates/place/index.html
@@ -1,7 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}
-    {{ _('place')|uc_first }}
-{% endblock %}
+{% block breadcrumb %}{{ [_('place')]|breadcrumb|safe }}{% endblock %}
 {% block content %}
     <div style="float:left;">
         {{ 'Place'|manual_link|safe }}
