--- a/openatlas/templates/place/insert.html
+++ b/openatlas/templates/place/insert.html
@@ -2,6 +2,7 @@
 {% block breadcrumb %}
     {% if origin %}
         <a href="{{ url_for(origin.view_name + '_index') }}">{{ _(structure['place'].view_name)|uc_first }}</a>
+        {{ '> ' + structure['place']|link|safe if structure['place'] else '' }}
         {{ '> ' + structure['feature']|link|safe if structure['feature'] else '' }}
         {{ '> ' + structure['stratigraphic_unit']|link|safe if structure['stratigraphic_unit'] else '' }}
         > {{ origin|link|safe }}
