--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block title_name %}- {{ actor.name }}{% endblock %}
-{% block breadcrumb %}{{ [[_('actor'), 'actor_index'], actor.name]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('actor'), 'actor_index'], actor.name]|crumb|safe }}
+{% endblock %}
 {% block content %}
 <div id="tabs" class="tabs-container">
     <ul>
