--- a/openatlas/templates/admin/check_similar.html
+++ b/openatlas/templates/admin/check_similar.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('check similar names')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('check similar names')]|crumb|safe }}{% endblock %}
 {% block content %}
     {{ 'Data_integrity'|manual_link|safe }}
     {{ form|display_form|safe }}
