--- a/openatlas/templates/admin/mail_update.html
+++ b/openatlas/templates/admin/mail_update.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], [_('mail'), 'admin_mail'], _('edit')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'], [_('mail'), 'admin_mail'], _('edit')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
 {% endblock %}
