--- a/openatlas/templates/event/view.html
+++ b/openatlas/templates/event/view.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %}- {{ event.name }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a>
-    > {{ event.name|truncate_string|safe }}
+    {{ [[_('event'), 'event_index'], event.name]|crumb|safe }}
 {% endblock %}
 {% block content %}
 <div id="tabs" class="tabs-container">
