--- a/openatlas/templates/file/index.html
+++ b/openatlas/templates/file/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('files')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('files')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {% if 'contributor'|is_authorized %}
         <div class="button-bar">
