--- a/openatlas/templates/actor/index.html
+++ b/openatlas/templates/actor/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('actor')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('actor')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ 'Actor'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
