--- a/openatlas/templates/actor/insert.html
+++ b/openatlas/templates/actor/insert.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     {% if origin %}
-        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + g.classes[code].name]|breadcrumb|safe }}
+        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + g.classes[code].name]|crumb|safe }}
     {% else %}
-        {{ [[_('actor'), 'actor_index'], '+ ' + g.classes[code].name]|breadcrumb|safe }}
+        {{ [[_('actor'), 'actor_index'], '+ ' + g.classes[code].name]|crumb|safe }}
     {% endif %}
 {% endblock %}
 {% block content %}
