--- a/openatlas/templates/actor/update.html
+++ b/openatlas/templates/actor/update.html
@@ -1,6 +1,8 @@
 {% extends 'layout.html' %}
 {% block title_name %}- {{ actor.name }}{% endblock %}
-{% block breadcrumb %}{{ [[_('actor'), 'actor_index'], actor, _('edit')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('actor'), 'actor_index'], actor, _('edit')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {% if modifier %}
         <p class="error">{{ _('error modified by %(username)s', username=modifier|safe) }}</p>
