--- a/openatlas/templates/admin/index.html
+++ b/openatlas/templates/admin/index.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('admin')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}{{ [_('admin')]|crumb|safe }}{% endblock %}
 {% block content %}
     <div id="admin_index">
         {% for dir, value in writeable_dirs.items() %}
