--- a/openatlas/templates/admin/map.html
+++ b/openatlas/templates/admin/map.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('map')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'], _('map')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ 'Map'|manual_link|safe }}
     {{ form|display_form|safe }}
