--- a/openatlas/templates/admin/newsletter.html
+++ b/openatlas/templates/admin/newsletter.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('newsletter')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'], _('newsletter')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     <form id="newsletter-form" name="newsletter_form" method="post">
         {{ form.csrf_token }}
