--- a/openatlas/templates/admin/orphans.html
+++ b/openatlas/templates/admin/orphans.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [[_('admin'), 'admin_index'], _('orphans')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'], _('orphans')]|crumb|safe }}
+{% endblock %}
 {% block content %}
 {{ 'Data_integrity'|manual_link|safe }}
 <div id="tabs" class="tabs-container">
