--- a/openatlas/templates/content/update.html
+++ b/openatlas/templates/content/update.html
@@ -1,11 +1,15 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
+    {{ [[_('admin'), 'admin_index'],
+        [_('content'), 'content_index'],
+        [_('content'), 'content_view', item],
+        _('edit')]|crumb|safe }}
+{% endblock %}
+{% block content %}
     <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
     > <a href="{{ url_for('content_index') }}">{{ _('content')|uc_first }}</a>
     > <a href="{{ url_for('content_view', item=item) }}">{{ _(item)|uc_first }}</a>
     > {{ _('edit')|uc_first }}
-{% endblock %}
-{% block content %}
     <form method="post">
         {{ form.csrf_token }}
         {% for language in languages %}
