--- a/openatlas/templates/event/index.html
+++ b/openatlas/templates/event/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('event')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('event')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ 'Event'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
