--- a/openatlas/templates/event/insert.html
+++ b/openatlas/templates/event/insert.html
@@ -1,12 +1,10 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     {% if origin %}
-        <a href="{{ url_for(origin.view_name + '_index') }}">{{ _(origin.view_name)|uc_first }}</a>
-        > {{ origin|link|safe }}
+        {{ [[_(origin.view_name), origin.view_name + '_index'], origin, '+ ' + g.classes[code].name]|crumb|safe }}
     {% else %}
-        <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a>
+        {{ [[_('event'), 'event_index'], '+ ' + g.classes[code].name]|crumb|safe }}
     {% endif %}
-    > + {{ code|get_class_name }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
