--- a/openatlas/templates/event/update.html
+++ b/openatlas/templates/event/update.html
@@ -1,9 +1,7 @@
 {% extends 'layout.html' %}
 {% block title_name %}- {{ event.name }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a>
-    > {{ event|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_('event'), 'event_index'], event, _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {% if modifier %}
