--- a/openatlas/templates/export/export_csv.html
+++ b/openatlas/templates/export/export_csv.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > {{ _('export CSV')|uc_first }}
+    {{ [[_('admin'), 'admin_index'], _('export CSV')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {% if writeable %}
