--- a/openatlas/templates/export/export_sql.html
+++ b/openatlas/templates/export/export_sql.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > {{ _('export SQL')|uc_first }}
+    {{ [[_('admin'), 'admin_index'], _('export SQL')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ 'Export'|manual_link|safe }}
