--- a/openatlas/templates/file/add.html
+++ b/openatlas/templates/file/add.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('file_index') }}">{{ _('files')|uc_first }}</a>
-    > {{ entity|link|safe }}
-    > {{ _('add')|uc_first + ' ' + _(class_name)|uc_first }}
+    {{ [[_('files'), 'file_index'], entity, _('add') + ' ' + _(class_name).capitalize()]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|safe }}
