--- a/openatlas/templates/file/view.html
+++ b/openatlas/templates/file/view.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('file_index') }}">{{ _('files')|uc_first }}</a>
-    > {{ entity.name|truncate_string|safe }}
+    {{ [[_('files'), 'file_index'], entity.name]|crumb|safe }}
 {% endblock %}
 {% block content %}
     <div id="tabs" class="tabs-container">
