--- a/openatlas/templates/model/index.html
+++ b/openatlas/templates/model/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('model')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('model')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     <div style="float:left">
         <a href="/static/images/model/openatlas_schema.png">
