--- a/openatlas/templates/object/index.html
+++ b/openatlas/templates/object/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('object')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('object')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ 'Object'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
