--- a/openatlas/templates/profile/index.html
+++ b/openatlas/templates/profile/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('profile')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('profile')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ 'Profile'|manual_link|safe }}
     {% if not config['DEMO_MODE'] %}
