--- a/openatlas/templates/source/index.html
+++ b/openatlas/templates/source/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('source')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('source')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ 'Source'|manual_link|safe }}
     {% if 'contributor'|is_authorized %}
