--- a/openatlas/templates/types/index.html
+++ b/openatlas/templates/types/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
-{% block breadcrumb %}{{ [_('types')]|breadcrumb|safe }}{% endblock %}
+{% block breadcrumb %}
+    {{ [_('types')]|crumb|safe }}
+{% endblock %}
 {% block content %}
     {{ 'Form_field_type'|manual_link|safe }}
     <div id="tabs-menu" class="tabs-container">
