--- a/openatlas/templates/import/project_insert.html
+++ b/openatlas/templates/import/project_insert.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > <a href="{{ url_for('import_index') }}">{{ _('import')|uc_first }}</a>
-    > + {{ _('project')|uc_first }}
+    {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], _('project')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
