--- a/openatlas/templates/import/project_update.html
+++ b/openatlas/templates/import/project_update.html
@@ -1,9 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > <a href="{{ url_for('import_index') }}">{{ _('import')|uc_first }}</a>
-    > {{ project|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], project, _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
