--- a/openatlas/templates/index/credits.html
+++ b/openatlas/templates/index/credits.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a>
-    > {{ _('credits')|uc_first }}
+    {{ [[_('overview'), 'index'], _('credits')]|crumb|safe }}
 {% endblock %}
 {% block content %}
 <p>Development was and is funded by several projects, grants, institutes and departments:</p>
