--- a/openatlas/templates/index/feedback.html
+++ b/openatlas/templates/index/feedback.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a>
-    > {{ _('feedback')|uc_first }}
+    {{ [[_('overview'), 'index'], _('feedback')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     <p>
