--- a/openatlas/templates/login/reset_password.html
+++ b/openatlas/templates/login/reset_password.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('index') }}">{{ _('overview')|uc_first }}</a>
-    > <a href="{{ url_for('login') }}">{{ _('login')|uc_first }}</a>
-    > {{ _('Forgot your password?') }}
+    {{ [[_('overview'), 'index'], [_('login'), 'login'], _('Forgot your password?')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     <p>{{ _('info password reset') }}</p>
