--- a/openatlas/templates/model/class_view.html
+++ b/openatlas/templates/model/class_view.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a>
-    > <a href="{{ url_for('class_index') }}">{{ _('classes')|uc_first }}</a>
-    > {{ class_.code }}
+    {{ [[_('model'), 'model_index'], [_('classes'), 'class_index'], class_.code]|crumb|safe }}
 {% endblock %}
 {% block content %}
     <div style="float:left;padding-right:2em;">
