--- a/openatlas/templates/model/property_view.html
+++ b/openatlas/templates/model/property_view.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a>
-    > <a href="{{ url_for('property_index') }}">{{ _('properties')|uc_first }}</a>
-    > {{ property.code }}
+    {{ [[_('model'), 'model_index'], [_('properties'), 'property_index'], property.code]|crumb|safe }}
 {% endblock %}
 {% block content %}
     <div style="float:left;padding-right:2em;">
