--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -70,12 +70,10 @@
             <div id="header-menu">
                 <div>
                     {{ _('version')|uc_first }} {{ config['VERSION'] }} -
-                    <a href="{{ url_for('index_changelog') }}">{{ _('changelog')|uc_first }}</a>
-                    - <a href="https://redmine.openatlas.eu/projects/uni/wiki/Manual" target="_blank" rel="noopener">
+                    <a href="{{ url_for('index_changelog') }}">{{ _('changelog')|uc_first }}</a> -
+                    <a href="https://redmine.openatlas.eu/projects/uni/wiki/Manual" target="_blank" rel="noopener">
                         <img style="height:14px;" src="/static/images/icons/book.png" alt=''> {{ _('manual')|uc_first }}
-                      </a>
-                    - <a href="{{ url_for('model_index') }}">{{ _('model')|uc_first }}</a>
-                    - <a href="{{ url_for('index_credits') }}">{{ _('credits')|uc_first }}</a>
+                    </a>
                     {% if 'contact'|display_content_translation %}
                         - <a href="{{ url_for('index_content', item='contact') }}">{{ _('contact')|uc_first }}</a>
                     {% endif %}
