--- a/openatlas/static/css/color.css
+++ b/openatlas/static/css/color.css
@@ -32,22 +32,14 @@ span.tooltip,
 #menu div.active a,
 #menu div.active a:hover,
 .ui-widget-content a {
-    color: #4088c3;
-}
-
-div.tabs-container table a:hover,
-table a:hover {
-    color: #46779f;
-}
-
-.error {
-    color: #e60005;
+    color: #0047bb;
 }
 
 /* Background color */
 
-body, .ui-widget-content, .ui-dialog .ui-dialog-content {
-    background-color: #efefef;
+.ui-widget-content,
+.ui-dialog .ui-dialog-content {
+    background-color: #e9ecef;
 }
 
 .overlay,
@@ -64,13 +56,16 @@ body, .ui-widget-content, .ui-dialog .ui-dialog-content {
 select,
 span.tooltip,
 input[type="text"],
-.ui-tabs .ui-tabs-panel,
 .ui-widget-content .ui-state-active,
 .ui-widget-header .ui-state-active,
-div.tabs-container .ui-widget-content,
 div.tabs-container .ui-state-active,
 div.tabs-container .ui-state-active.ui-state-hover {
     background-color: #ffffff;
+}
+
+.ui-tabs .ui-tabs-panel,
+div.tabs-container .ui-widget-content {
+    background-color: #f8f9fa!important;
 }
 
 /* Border color */
@@ -80,7 +75,7 @@ div.tabs-container .ui-state-active.ui-state-hover {
 }
 
 #menu > div.active, #disk_size {
-    border-color: #4088c3;
+    border-color: #0047bb;
 }
 
 textarea,
@@ -95,4 +90,25 @@ div.pagedisplay {
     border-left-color: #969392;
     border-bottom-color: #ffffff;
     border-right-color: #ffffff;
+}
+
+/* tables */
+
+.table {
+    border: none;
+}
+
+.table thead th {
+    border-bottom: 2px solid #0047bb;
+    background-color: #e9ecef;
+}
+
+div.tabs-container table a:hover,
+table a:hover {
+    color: #0047bb;
+    text-decoration: none;
+}
+
+.table td, .table th {
+    border-top: none;
 }
