--- a/openatlas/static/css/uitheme.css
+++ b/openatlas/static/css/uitheme.css
@@ -109,11 +109,11 @@
 .ui-widget {   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size:13px; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 1em; }
-.ui-widget-content { border: 1px solid #aaaaaa; background: #ffffff url(../images/customui/ui-bg_glass_75_ffffff_1x400.png) 50% 50% repeat-x; color: #404040; }
+.ui-widget-content { border: 1px solid #aaaaaa; background: #ffffff url(images/ui-bg_glass_75_ffffff_1x400.png) 50% 50% repeat-x; color: #404040; }
 .ui-widget-content a { color: #404040; }
 .ui-widget-header {
   font-weight:bold;
-  border-color: #0064cd #0064cd #003f81;
+  border-color: #0064cd #0064cd #003f81;s
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
   border:1px solid #666;
 
@@ -250,14 +250,14 @@
 ----------------------------------*/
 
 /* states and images */
-.ui-icon { width: 16px; height: 16px; background-image: url(../images/customui/ui-icons_222222_256x240.png); }
-.ui-widget-content .ui-icon {background-image: url(../images/customui/ui-icons_222222_256x240.png); }
-.ui-widget-header .ui-icon {background-image: url(../images/customui/ui-icons_222222_256x240.png); }
-.ui-state-default .ui-icon { background-image: url(../images/customui/ui-icons_888888_256x240.png); }
-.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(../images/customui/ui-icons_454545_256x240.png); }
-.ui-state-active .ui-icon {background-image: url(../images/customui/ui-icons_454545_256x240.png); }
-.ui-state-highlight .ui-icon {background-image: url(../images/customui/ui-icons_2e83ff_256x240.png); }
-.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(../images/customui/ui-icons_f6cf3b_256x240.png); }
+.ui-icon { width: 16px; height: 16px; background-image: url(images/ui-icons_222222_256x240.png); }
+.ui-widget-content .ui-icon {background-image: url(images/ui-icons_222222_256x240.png); }
+.ui-widget-header .ui-icon {background-image: url(images/ui-icons_222222_256x240.png); }
+.ui-state-default .ui-icon { background-image: url(images/ui-icons_888888_256x240.png); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/ui-icons_454545_256x240.png); }
+.ui-state-active .ui-icon {background-image: url(images/ui-icons_454545_256x240.png); }
+.ui-state-highlight .ui-icon {background-image: url(images/ui-icons_2e83ff_256x240.png); }
+.ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(images/ui-icons_f6cf3b_256x240.png); }
 
 /* positioning */
 .ui-icon-carat-1-n { background-position: 0 0; }
@@ -441,6 +441,7 @@
 ----------------------------------*/
 
 /* Corner radius */
+/* -- round corners are so 90s ...
 .ui-corner-all,
 .ui-corner-top,
 .ui-corner-left,
@@ -477,12 +478,12 @@
   -khtml-border-bottom-right-radius: 4px;
   border-bottom-right-radius: 4px;
 }
-
+*/
 
 /* Overlays */
 
 .ui-widget-overlay {
-  background: #aaaaaa url(../images/customui/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
+  background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
   opacity: .30;
   filter:Alpha(Opacity=30);
 }
@@ -490,7 +491,7 @@
 .ui-widget-shadow {
   margin: -8px 0 0 -8px;
   padding: 8px;
-  background: #aaaaaa url(../images/customui/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
+  background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x;
   opacity: .30;filter:Alpha(Opacity=30);
   -moz-border-radius: 8px;
   -khtml-border-radius: 8px;
@@ -989,16 +990,26 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
  .ui-tabs .ui-tabs-nav{ background:none; border-color: #ddd;border-style: solid;border-width: 0 0 1px;}
 .ui-tabs { position: relative; padding: .2em; zoom: 1; border:0px;} /* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
 
-
-.ui-tabs .ui-tabs-nav li:hover, .ui-tabs .ui-tabs-nav li a:hover{
-  background:whiteSmoke;
-  border-bottom:1px solid #ddd;
+.ui-tabs .ui-tabs-nav li.ui-tabs-active,
+.ui-tabs .ui-tabs-nav li:hover {
+  background:#f8f9fa;
+  border-bottom:2px solid #0047bb;
   padding-bottom:0px;
-   color:#00438A;
+   color:#0047bb;
 }
 
 .ui-tabs .ui-tabs-nav { margin: 0; padding: .2em .2em 0; border-bottom:1px solid #DDD; }
-.ui-tabs .ui-tabs-nav li {  text-decoration: none; list-style: none; float: left; position: relative; top: 1px; padding: 0px 0px 1px 0px; white-space: nowrap; background:none; border:0px; }
+.ui-tabs .ui-tabs-nav li {
+  text-decoration: none;
+  list-style: none;
+  float: left;
+  position: relative;
+  top: 1px;
+  padding: 0px 0px 1px 0px;
+  white-space: nowrap;
+  background:none;
+  border-color: transparent;
+}
 
 .ui-tabs-nav .ui-state-default{
   -webkit-box-shadow: 0px 0px 0px #ffffff; /* Saf3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
@@ -1020,8 +1031,7 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 
  }
 
-.ui-tabs .ui-tabs-nav li.ui-tabs-active { margin-bottom: 0; padding-bottom: 0px; outline:none;}
-.ui-tabs .ui-tabs-nav li.ui-tabs-active , .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a {
+.ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-state-processing a {
   background-color: #ffffff;
   border: 1px solid #ddd;
   border-bottom-color: #ffffff;
@@ -1029,14 +1039,20 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
   color:gray;
   outline:none;
 }
-.ui-tabs .ui-tabs-nav li.ui-tabs-active a{background-color: #ffffff;outline:none;border:none;}
-.ui-tabs .ui-tabs-nav li.ui-tabs-active:hover{
-  background:#ffffff;
+.ui-tabs .ui-tabs-nav li.ui-tabs-active,
+.ui-tabs .ui-tabs-nav li.ui-tabs-active:hover {
+  background:#f8f9fa;
   outline:none;
   margin-bottom:0px;
 }
-.ui-tabs .ui-tabs-nav li.ui-tabs-active a, .ui-tabs .ui-tabs-nav li.ui-state-disabled a, .ui-tabs .ui-tabs-nav li.ui-tabs-loading a { cursor: text; }
-.ui-tabs .ui-tabs-nav li a, .ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active a { cursor: pointer; color:#0069D6; background:none; font-weight:normal; margin-bottom:-1px;}
+.ui-tabs .ui-tabs-nav li.ui-tabs-active a,
+.ui-tabs .ui-tabs-nav li.ui-state-disabled a,
+.ui-tabs .ui-tabs-nav li.ui-tabs-loading a { cursor: text; }
+
+.ui-tabs .ui-tabs-nav li a,
+.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active a {
+  cursor: pointer;
+  color:#0069D6; background:none; font-weight:normal; margin-bottom:-1px;}
 /* first selector in group seems obsolete, but required to overcome bug in Opera applying cursor: text overall if defined elsewhere... */
 .ui-tabs .ui-tabs-panel { display: block; border-width: 0; padding: 1em 1.4em; background: none; }
 .ui-tabs-panel .ui-button{text-decoration:none;}
