--- a/openatlas/templates/import/import_data.html
+++ b/openatlas/templates/import/import_data.html
@@ -1,16 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('admin_index') }}">{{ _('admin')|uc_first }}</a>
-    > <a href="{{ url_for('import_index') }}">{{ _('import')|uc_first }}</a>
-    > {{ project|link|safe }}
-    >
-    {% if class_code == 'E18' %}
-        {{ 'place'|uc_first }}
-    {% elif class_code == 'E33' %}
-        {{ 'source'|uc_first }}
-    {% else %}
-        {{ class_code|get_class_name }}
-    {% endif %}
+    {{ [[_('admin'), 'admin_index'], [_('import'), 'import_index'], project, class_label]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ 'Import'|manual_link|safe }}
