Display usage of CIDOC CRM classes and properties

--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -73,7 +73,7 @@
             <p>Veronika Gründhammer (Project Administration)</p>
             <p>Jan Belik (Logo Design and Design Consulting)</p>
             <p>Daniel Kittel (Quality Assurance)</p>
-            <h1>Contributors</h1>
+            <h1>OpenAtlas Contributors</h1>
             <p>These people supported us in many different ways. Our thanks goes to all of them.</p>
             <p>
                 Asil Çetin<br>
