--- a/openatlas/templates/note/insert.html
+++ b/openatlas/templates/note/insert.html
@@ -1,8 +1,6 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for((entity.view_name) + '_index') }}">{{ _(entity.view_name)|uc_first }}</a>
-    > {{ entity|link|safe }}
-    > + {{ _('note')|uc_first }}
+    {{ [[_(entity.view_name), entity.view_name + '_index'], entity, '+ ' + _('note').capitalize()]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
