--- a/openatlas/templates/object/update.html
+++ b/openatlas/templates/object/update.html
@@ -1,8 +1,6 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for('object_index') }}">{{ _('object')|uc_first }}</a>
-    > {{ object_|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_('object'), 'object_index'], object_, _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form()|safe }}
