--- a/openatlas/templates/object/view.html
+++ b/openatlas/templates/object/view.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %}- {{ object_.name }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('object_index') }}">{{ _('object')|uc_first }}</a>
-    > {{ object_.name|truncate_string|safe }}
+    {{ [[_('object'), 'object_index'], object_.name]|crumb|safe }}
 {% endblock %}
 {% block content %}
 <div id="tabs" class="tabs-container">
