--- a/openatlas/templates/overlay/update.html
+++ b/openatlas/templates/overlay/update.html
@@ -1,9 +1,6 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
-    <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
-    > {{ place|link|safe }}
-    > {{ image|link|safe }}
-    > {{ _('update')|uc_first }} {{ _('overlay')|uc_first }}
+    {{ [[_('place'), 'place_index'], place, image, _('update overlay')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     <div class="button-bar">
