--- a/openatlas/templates/place/update.html
+++ b/openatlas/templates/place/update.html
@@ -1,12 +1,12 @@
 {% extends 'layout.html' %}
 {% block title_name %}- {{ object_.name }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
-    {{ '> ' + structure['place']|link|safe if structure['place'] else '' }}
-    {{ '> ' + structure['feature']|link|safe if structure['feature'] else '' }}
-    {{ '> ' + structure['stratigraphic_unit']|link|safe if structure['stratigraphic_unit'] else '' }}
-    > {{ object_|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [['place', 'place_index'],
+        structure['place'],
+        structure['feature'],
+        structure['stratigraphic_unit'],
+        object_,
+        _('edit')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {% if modifier %}
