--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -1,11 +1,7 @@
 {% extends "layout.html" %}
 {% block title_name %}- {{ object_.name }}{% endblock %}
 {% block breadcrumb %}
-    <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
-    {{ '> ' + structure['place']|link|safe if structure['place'] else '' }}
-    {{ '> ' + structure['feature']|link|safe if structure['feature'] else '' }}
-    {{ '> ' + structure['stratigraphic_unit']|link|safe if structure['stratigraphic_unit'] else '' }}
-    > {{ object_.name|truncate_string|safe }}
+    {{ [['place', 'place_index'], structure['place'], structure['feature'], structure['stratigraphic_unit'], object_.name]|crumb|safe }}
 {% endblock %}
 {% block content %}
 <div id="tabs" class="tabs-container">
