--- a/openatlas/templates/profile/password.html
+++ b/openatlas/templates/profile/password.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('profile_index') }}">{{ _('profile')|uc_first }}</a>
-    > {{ _('change password')|uc_first }}
+    {{ [[_('profile'), 'profile_index'], _('change password')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form('password-form')|safe }}
