--- a/openatlas/templates/reference/add.html
+++ b/openatlas/templates/reference/add.html
@@ -1,8 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for('reference_index') }}">{{ _('reference' )|uc_first }}</a>
-    > {{ reference|link|safe }}
-    > {{ _('add')|uc_first }} {{ _(class_name)|uc_first }}
+    {{ [[_('reference'), 'reference_index'], reference, _('add')]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
