--- a/openatlas/templates/reference/link-update.html
+++ b/openatlas/templates/reference/link-update.html
@@ -1,9 +1,6 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
-    <a href="{{ url_for(origin.view_name + '_index') }}">{{ _(origin.view_name)|uc_first }}</a>
-    > {{ origin|link|safe }}
-    > {{ linked_object|link|safe }}
-    > {{ _('edit')|uc_first }}
+    {{ [[_(origin.view_name), origin.view_name + '_index'], origin, linked_object, _(edit)]|crumb|safe }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
